--- a/index.html
+++ b/index.html
@@ -16,15 +16,177 @@
   <body>
     <div id="es-rc">
       <div id="es-rc-content">
-        <section class="es-kv"></section>
+        <div class="es-kv">
+          <img class="es-kv__logo" src="./images/logo.png" alt="logo" />
+          <img
+            class="es-kv__image es-kv__image-1"
+            src="./images/kv-right.png"
+            alt="Kobieta"
+          />
+          <img class="es-kv__deco-image-1" src="./images/deco-1.png" alt="" />
+          <img
+            class="es-kv__image es-kv__image-2"
+            src="./images/kv-left.png"
+            alt="Kobieta"
+          />
+          <div class="es-kv__content">
+            <h3 class="es-title es-kv__title">
+              FIBRE CLINIX <br />
+              <span class="es-kv__title--bold">BONDFINITY</span>
+              <br />
+              <span class="es-kv__title--light">Fibre Sealer</span>
+            </h3>
+            <p class="es-kv__subtitle">
+              Natychmiastowa regeneracja <br />i wzmocnienie włosów
+            </p>
+          </div>
+          <div class="es-kv__content-bottom">
+            <p class="es-kv__description es-kv__description--mobile">
+              Lekki krem bez spłukiwania, który scala 94% rozdwojonych końcówek,
+              regeneruje włosy, wygładza je i&nbsp;kontroluje puszenie przez 48
+              godzin.
+            </p>
+            <p class="es-kv__description es-kv__description--desktop">
+              Lekki krem bez spłukiwania, który scala 94% rozdwojonych końcówek,
+              regeneruje włosy, wygładza je i&nbsp;kontroluje puszenie przez
+              <br />48 godzin.
+            </p>
+            <img class="es-kv__deco-image-2" src="./images/deco-2.png" alt="" />
+            <p class="es-kv__description-first">
+              Natychmiast <br />uszczelnia<br />
+              <span class="es-kv__description--large">94%</span><br />
+              rozdwojonych<br />
+              końcówek<sup>*</sup>
+            </p>
+            <p class="es-kv__description-second">
+              Redukuje<br />
+              łamliwość <br />włosów o<br />
+              <span class="es-kv__description--large">90%<sup>*</sup></span>
+            </p>
+            <p class="es-kv__disclaimer">
+              *w porównaniu do włosów niepoddanych kuracji
+            </p>
+          </div>
+        </div>
 
-        <section class="es-technology"></section>
+        <div class="es-technology">
+          <h3 class="es-section-title es-technology__title">
+            Zaawansowana technologia regeneracji<br />
+            i&nbsp;wzmocnienia włosów
+          </h3>
+          <img
+            class="es-technology__deco-image-1"
+            src="./images/deco-3.png"
+            alt=""
+          />
+          <p class="es-technology__subtitle">BONDFINITY</p>
+          <p class="es-technology__description">
+            Działa na poziomie rdzenia włosa, tworząc
+            <b>nowe wiązania kowalencyjne,</b> co prowadzi do silniejszej i
+            bardziej odpornej struktury włosa. Włosy stają się mocniejsze,
+            elastyczne i odporne na uszkodzenia.
+          </p>
+          <ul class="es-technology__list">
+            <li class="es-technology__item">
+              Tworzy najsilniejsze, trwałe wiązania kowalencyjne
+            </li>
+            <li class="es-technology__item">
+              Zamyka własną keratynę włosa w jego wnętrzu​
+            </li>
+            <li class="es-technology__item">
+              Poprawia elastyczność i odporność na uszkodzenia
+            </li>
+            <li class="es-technology__item">
+              Przedłuża efekty zabiegów salonowych Fibre Clinix
+            </li>
+          </ul>
+        </div>
 
-        <section class="es-features"></section>
+        <div class="es-features">
+          <h3 class="es-section-title es-features__title">
+            Intensywna regeneracja i ochrona
+          </h3>
+          <img
+            class="es-features__deco-image-1"
+            src="./images/deco-4.png"
+            alt=""
+          />
+          <div class="es-features__content">
+            <div class="es-features__text-wrapper">
+              <p class="es-features__content-title">FIBRE CLINIX</p>
+              <p class="es-features__content-subtitle">BONDFINITY</p>
+              <p class="es-features__content-second-subtitle">
+                Fibre Sealer – Lekki Krem Regenerujący do Włosów
+              </p>
+              <p class="es-features__content-description">
+                Natychmiast scala rozdwojone końcówki, regeneruje włosy i nadaje
+                im zdrowy wygląd, gładkość i połysk. Dzięki lekkiej formule
+                włosy pozostają gładkie i łatwe do stylizacji.
+              </p>
+              <ul class="es-features__list">
+                <li class="es-features__list-item">
+                  Odbudowuje włosy i ogranicza łamliwość o 93%<sup>*</sup>
+                </li>
+                <li class="es-features__list-item">
+                  Zapobiega puszeniu się włosów nawet przez 48 godzin​
+                </li>
+                <li class="es-features__list-item">
+                  Chroni przed wysoką temperaturą do 230°C
+                </li>
+                <li class="es-features__list-item">
+                  Lekka i szybko wchłaniająca się formuła​
+                </li>
+              </ul>
+            </div>
+            <img
+              class="es-features__image"
+              src="./images/features.png"
+              alt=""
+            />
+          </div>
+          <img
+            class="es-features__deco-image-2"
+            src="./images/deco-5.png"
+            alt=""
+          />
+        </div>
 
-        <section class="es-ba"></section>
+        <div class="es-ba">
+          <h3 class="es-title es-ba__title">WZMOCNIENIE I&nbsp;GŁADKOŚĆ</h3>
+          <p class="es-ba__subtitle">Dla każdego rodzaju włosów</p>
 
-        <section class="es-cross-sell"></section>
+          <img class="es-ba__deco-image-1" src="./images/deco-6.png" alt="" />
+          <div class="es-ba__image-wrapper">
+            <p class="es-ba__before">Przed</p>
+            <img class="es-ba__image" src="./images/ba.png" alt="" />
+            <p class="es-ba__after">Po</p>
+          </div>
+          <img class="es-ba__deco-image-2" src="./images/deco-7.png" alt="" />
+        </div>
+
+        <div class="es-cross">
+          <h3 class="es-section-title es-cross__title">
+            Odbuduj i Wzmocnij Swoje Włosy
+          </h3>
+          <p class="es-title es-cross__title">BONDFINITY Fibre Sealer</p>
+          <div class="es-cross__cards">
+            <div class="es-cross__card">
+              <img
+                class="es-cross__card-image"
+                src="./images/cross-1.png"
+                alt=""
+              />
+              <p class="es-cross__card-title">Lekki Krem <br />do Włosów</p>
+              <p class="es-cross__card-description">150 ml</p>
+
+              <div class="es-cross__card-button">
+                <a class="es-link es-cross__link" href="#" target="_blank">
+                  Kup teraz
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
