fix: change styles

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <img
             class="es-kv__image es-kv__image-2"
             src="./images/kv-left.png"
-            alt="Kobieta"
+            alt="Fibre Clinix Bondfinity Fibre Sealer"
           />
           <div class="es-kv__content">
             <h3 class="es-title es-kv__title">
@@ -141,7 +141,7 @@
             <img
               class="es-features__image"
               src="./images/features.png"
-              alt=""
+              alt="Opakowanie Fibre Clinix"
             />
           </div>
           <img
@@ -158,7 +158,7 @@
           <img class="es-ba__deco-image-1" src="./images/deco-6.png" alt="" />
           <div class="es-ba__image-wrapper">
             <p class="es-ba__before">Przed</p>
-            <img class="es-ba__image" src="./images/ba.png" alt="" />
+            <img class="es-ba__image" src="./images/ba.png" alt="Przed i Po" />
             <p class="es-ba__after">Po</p>
           </div>
           <img class="es-ba__deco-image-2" src="./images/deco-7.png" alt="" />
@@ -174,7 +174,7 @@
               <img
                 class="es-cross__card-image"
                 src="./images/cross-1.png"
-                alt=""
+                alt="BONDFINITY Fibre Sealer"
               />
               <p class="es-cross__card-title">Lekki Krem <br />do Włosów</p>
               <p class="es-cross__card-description">150 ml</p>
