--- a/4067971066486.html
+++ b/4067971066486.html
@@ -4,29 +4,29 @@
   href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
   rel="stylesheet"
 />
-<link rel="stylesheet" href="{{base_url}}EAN/style/styles.css" />
+<link rel="stylesheet" href="{{base_url}}4067971066486/style/styles.css" />
 
 <div id="es-rc">
   <div id="es-rc-content">
     <div class="es-kv">
       <img
         class="es-kv__logo"
-        src="{{base_url}}EAN/images/logo.png"
+        src="{{base_url}}4067971066486/images/logo.png"
         alt="logo"
       />
       <img
         class="es-kv__image es-kv__image-1"
-        src="{{base_url}}EAN/images/kv-right.png"
+        src="{{base_url}}4067971066486/images/kv-right.png"
         alt="Kobieta"
       />
       <img
         class="es-kv__deco-image-1"
-        src="{{base_url}}EAN/images/deco-1.png"
+        src="{{base_url}}4067971066486/images/deco-1.png"
         alt=""
       />
       <img
         class="es-kv__image es-kv__image-2"
-        src="{{base_url}}EAN/images/kv-left.png"
+        src="{{base_url}}4067971066486/images/kv-left.png"
         alt="Fibre Clinix Bondfinity Fibre Sealer"
       />
       <div class="es-kv__content">
@@ -53,7 +53,7 @@
         </p>
         <img
           class="es-kv__deco-image-2"
-          src="{{base_url}}EAN/images/deco-2.png"
+          src="{{base_url}}4067971066486/images/deco-2.png"
           alt=""
         />
         <p class="es-kv__description-first">
@@ -80,7 +80,7 @@
       </h3>
       <img
         class="es-technology__deco-image-1"
-        src="{{base_url}}EAN/images/deco-3.png"
+        src="{{base_url}}4067971066486/images/deco-3.png"
         alt=""
       />
       <p class="es-technology__subtitle">BONDFINITY</p>
@@ -112,7 +112,7 @@
       </h3>
       <img
         class="es-features__deco-image-1"
-        src="{{base_url}}EAN/images/deco-4.png"
+        src="{{base_url}}4067971066486/images/deco-4.png"
         alt=""
       />
       <div class="es-features__content">
@@ -144,13 +144,13 @@
         </div>
         <img
           class="es-features__image"
-          src="{{base_url}}EAN/images/features.png"
+          src="{{base_url}}4067971066486/images/features.png"
           alt="Opakowanie Fibre Clinix"
         />
       </div>
       <img
         class="es-features__deco-image-2"
-        src="{{base_url}}EAN/images/deco-5.png"
+        src="{{base_url}}4067971066486/images/deco-5.png"
         alt=""
       />
     </div>
@@ -161,21 +161,21 @@
 
       <img
         class="es-ba__deco-image-1"
-        src="{{base_url}}EAN/images/deco-6.png"
+        src="{{base_url}}4067971066486/images/deco-6.png"
         alt=""
       />
       <div class="es-ba__image-wrapper">
         <p class="es-ba__before">Przed</p>
         <img
           class="es-ba__image"
-          src="{{base_url}}EAN/images/ba.png"
+          src="{{base_url}}4067971066486/images/ba.png"
           alt="Przed i Po"
         />
         <p class="es-ba__after">Po</p>
       </div>
       <img
         class="es-ba__deco-image-2"
-        src="{{base_url}}EAN/images/deco-7.png"
+        src="{{base_url}}4067971066486/images/deco-7.png"
         alt=""
       />
     </div>
@@ -189,7 +189,7 @@
         <div class="es-cross__card">
           <img
             class="es-cross__card-image"
-            src="{{base_url}}EAN/images/cross-1.png"
+            src="{{base_url}}4067971066486/images/cross-1.png"
             alt="BONDFINITY Fibre Sealer"
           />
           <p class="es-cross__card-title">Lekki Krem <br />do Włosów</p>
