--- a/4067971066486.html
+++ b/4067971066486.html
@@ -196,7 +196,11 @@
           <p class="es-cross__card-description">150 ml</p>
 
           <div class="es-cross__card-button">
-            <a class="es-link es-cross__link" href="#" target="_blank">
+            <a
+              class="es-link es-cross__link"
+              href="https://www.superpharm.pl/fibre-clinix-fibre-sealer-lekki-krem-regenerujacy-bez-splukiwania-199450"
+              target="_blank"
+            >
               Kup teraz
             </a>
           </div>
