fix: move letter to next row

--- a/4067971066486.html
+++ b/4067971066486.html
@@ -45,8 +45,8 @@
               <span class="es-kv__title--light">Fibre Sealer</span>
             </h3>
             <p class="es-kv__subtitle">
-              Natychmiastowa regeneracja i<br />
-              wzmocnienie włosów
+              Natychmiastowa regeneracja <br />
+              i wzmocnienie włosów
             </p>
           </div>
           <div class="es-kv__content-bottom">
